--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//Gpio/gpio.h=UTF-8
 encoding//User/main.c=GBK
+encoding//encode/encode.h=UTF-8
 encoding//screen/GUI_Paint.c=UTF-8
 encoding//screen/screen_api.c=GBK
