已经修改成dma驱动spi

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
-  "files.encoding": "gbk"
+  "files.encoding": "gbk",
+  "files.associations": {
+    "*.cpp": "cpp",
+    "gui_paint.h": "c"
+  }
 }
