--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "*.cpp": "cpp",
     "gui_paint.h": "c",
     "screen_api.h": "c",
-    "gpio.h": "c"
+    "gpio.h": "c",
+    "drive_screen.h": "c"
   }
 }
