开发设置更新与Lora通信测试
- 在.vscode/settings.json中添加了字符串头文件的路径配置。
- 从Lora/SX1278.c中注释掉Lora测试代码，便于后续正式代码接入。
- 在Lora/SX1278.h中删除了EXTI6中断初始化函数的声明，并进行相关清理。
- 在Peripheral/src/ch32v00x_tim.c中注释掉部分TIM配置函数，为简化代码做准备。
- 在Time/time_app.c中将TIM2的IC初始化改为注释形式，调整代码结构。
- 在User/ch32v00x_it.c中注释掉DMA中断处理代码，增加了新的DMA循环标志。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "gui_paint.h": "c",
     "screen_api.h": "c",
     "gpio.h": "c",
-    "drive_screen.h": "c"
+    "drive_screen.h": "c",
+    "string.h": "c"
   }
 }
