文档更新和调试输出优化
- 添加了关于字符串、字节和void数据类型的说明到NumPy文档。
- 调整了用户创建操作中的SQL查询参数顺序，以正确分配UUID。
- 修改了EntityClass内的重新加载机制，以遵循`flush`参数设置，避免在`flush=false`时刷新新实体。
- 调整了调试输出，优化了刷新操作的标志和条件检查。
- 在`Paint_DrawChar`函数中增加了边界检查，并优化了显示小图的DMA操作。
- 修改了`startup_animation`函数，调整了绘图和清除操作。
- 重构了`LCD_0IN85_Clear`函数，优化了循环和延迟操作。

这些更改涉及代码优化、文档改进和修复，旨在提升系统性能和用户体验。
电池还第二次显示没有

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,6 @@ eclipse.preferences.version=1
 encoding//Gpio/gpio.h=UTF-8
 encoding//User/main.c=GBK
 encoding//encode/encode.h=UTF-8
-encoding//screen/GUI_Paint.c=GBK
+encoding//screen/GUI_Paint.c=UTF-8
 encoding//screen/drive_screen.h=UTF-8
 encoding//screen/screen_api.c=GBK
