--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "gpio.h": "c",
     "drive_screen.h": "c",
     "string.h": "c",
-    "*.ipp": "c"
+    "*.ipp": "c",
+    "ch32v00x_it.h": "c"
   }
 }
