--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "drive_screen.h": "c",
     "string.h": "c",
     "*.ipp": "c",
-    "ch32v00x_it.h": "c"
+    "ch32v00x_it.h": "c",
+    "*.inc": "c"
   }
 }
