解决了变量的bug，调整了休眠宏定义以及debug的宏定义

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "string.h": "c",
     "*.ipp": "c",
     "ch32v00x_it.h": "c",
-    "*.inc": "c"
+    "*.inc": "c",
+    "ch32v00x_rcc.h": "c"
   }
 }
