可以发布的版本，需要与聊天的合并

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "*.ipp": "c",
     "ch32v00x_it.h": "c",
     "*.inc": "c",
-    "ch32v00x_rcc.h": "c"
+    "ch32v00x_rcc.h": "c",
+    "sx1278.h": "c",
+    "encode.h": "c"
   }
 }
