--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "ch32v00x_rcc.h": "c",
     "sx1278.h": "c",
     "encode.h": "c",
-    "seting.h": "c"
+    "seting.h": "c",
+    "debug.h": "c"
   }
 }
