--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "files.associations": {
     "*.cpp": "cpp",
     "gui_paint.h": "c",
-    "screen_api.h": "c",
+    "Screen_api.h": "c",
     "gpio.h": "c",
     "drive_screen.h": "c",
     "string.h": "c",
